# data-pipeline

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
airflow/: .env.example  Dockerfile  docker-compose.yaml
airflow/dags/: nyc_taxi_pipeline_dag.py
scripts/: setup_env.sh
src/: config.py
src/ingestion/: noaa_weather_ingestion.py  nyc_tlc_ingestion.py
src/quality/: data_quality_checks.py
src/transformation/: bronze_to_silver_taxi.py  bronze_to_silver_weather.py  silver_to_gold_features.py
terraform/: backend.tf  iam.tf
terraform/ephemeral/: athena.tf  emr_serverless.tf  glue_crawler.tf  iam.tf  main.tf  outputs.tf  remote_state.tf  variables.tf
terraform/persistent/: glue.tf  main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_ingestion.py  test_quality_and_dag.py  test_transformations.py  testing_philosophy.md
